--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.Quizpractice"
         tools:targetApi="31">
         <activity
+            android:name=".test_startActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StartTestActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QuestionsActivity"
+            android:exported="false" />
+        <activity
             android:name=".TestActivity"
             android:exported="false"
             android:theme="@style/Theme.Quizpractice.NoActionBar" />
