--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,25 @@
         android:theme="@style/Theme.Quizpractice"
         tools:targetApi="31">
         <activity
+            android:name=".QuestionManagementActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Quizpractice.NoActionBar" />
+        <activity
+            android:name=".TestManagementActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Quizpractice.NoActionBar" />
+        <activity
+            android:name=".CategoryManagementActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Quizpractice.NoActionBar" />
+        <activity
+            android:name=".AdminDashboardActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Quizpractice.NoActionBar" />
+        <activity
+            android:name=".AdminLoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".test_startActivity"
             android:exported="false" />
         <activity
@@ -38,6 +57,10 @@
             android:exported="false" />
         <activity
             android:name=".ResultActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Quizpractice.NoActionBar" />
+        <activity
+            android:name=".AnswersReviewActivity"
             android:exported="false"
             android:theme="@style/Theme.Quizpractice.NoActionBar" />
         <activity
